--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,18 @@ android {
         applicationId "com.la87hn.la87laprimera"
         minSdkVersion 21
         targetSdk 35
-        versionCode 10
-        versionName "5.0.0"
+        versionCode 12
+        versionName "5.0.1"
         multiDexEnabled true
     }
+
+    buildTypes {
+        release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
